[tool.poetry]
name = "zonis"
version = "1.0.0"
description = "Agnostic IPC for Python programs "
authors = ["skelmis <ethan@koldfusion.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.4"


[tool.poetry.group.examples.dependencies]
fastapi = "^0.86.0"
uvicorn = "^0.19.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.1"
Sphinx = "^5.3.0"
furo = "^2022.9.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."zonis/__init__.py"]